--- a/build.gradle
+++ b/build.gradle
@@ -1,38 +1,31 @@
-buildscript {
-    ext {
-        springBootVersion = "2.0.6.RELEASE"
-    }
-
-    repositories {
-        mavenCentral()
-    }
-
-    dependencies {
-        classpath "org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion"
-    }
-}
-
-
 plugins {
-    id "java"
+    id 'org.springframework.boot' version '2.1.7.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
+    id 'java'
 }
 
-apply plugin: 'org.springframework.boot'
+group = 'com.example'
+version = '0.0.1-SNAPSHOT'
+sourceCompatibility = '1.8'
 
 repositories {
     mavenCentral()
 }
 
-dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web:$springBootVersion")
-    compile("org.springframework.boot:spring-boot-starter-jdbc:$springBootVersion")
-
-    compile("mysql:mysql-connector-java:6.0.6")
-}
-
-def developmentDbUrl = "jdbc:mysql://localhost:3306/pal_member?user=root&useSSL=false&useTimezone=true&serverTimezone=UTC&useLegacyDatetimeCode=false"
 bootRun.environment([
-        "WELCOME_MESSAGE": "hello",
-        "SPRING_DATASOURCE_URL": developmentDbUrl,
+        "WELCOME_MESSAGE" : "Welcome to Application",
+]
+)
+test.environment([
+        "WELCOME_MESSAGE" : "Welcome to Application",
 ])
 
+dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation("mysql:mysql-connector-java:8.0.13")
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
+}
