--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+spring.application.name=demo
+#spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.datasource.url=jdbc:mysql://localhost:3306/pal_member?useSSL=false&user=root&
+spring.datasoure.user=root
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+spring.security.user.name=user
+spring.security.user.password=password
